--- a/HaouseBook/Views/MainMenueView.xaml
+++ b/HaouseBook/Views/MainMenueView.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Button Command="{Binding Path=AddTransactionCommand}">Add Transection</Button>
     </Grid>
 </UserControl>
