--- a/HaouseBook/Views/MainView.xaml
+++ b/HaouseBook/Views/MainView.xaml
@@ -6,17 +6,14 @@
              xmlns:local="clr-namespace:HaouseBook.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../Resources/ButtonResource.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50px"/>
-            <RowDefinition/>
-            <RowDefinition Height="50px"/>
-        </Grid.RowDefinitions>
-        <Rectangle Fill="#587792"/>
-        <Rectangle Grid.Row="2" Fill="#587792"/>
-        <StackPanel Orientation="Horizontal">
-            <Button Width="100" Background="Transparent">Overview</Button>
-            <Button Width="100" Background="Transparent">Transaction</Button>
-        </StackPanel>
+        <Button/>
     </Grid>
 </UserControl>
