--- a/HaouseBook/Resources/TextBlockResource.xaml
+++ b/HaouseBook/Resources/TextBlockResource.xaml
@@ -1,4 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <Style TargetType="TextBlock" x:Key="InfoText">
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="Padding" Value="20,0,0,0"/>
+    </Style>
 </ResourceDictionary>
